# trivial-file-server

./: .env  Cargo.toml  rustfmt.toml
src/: main.rs
static/: upload.html
