[package]
name = "trivial-file-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.4"
actix-http = "2"
actix-multipart = "0.3"
actix-web = "3"
anyhow = "1"
color-eyre = "0.5.11"
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3"
log = "0.4.0"
serde = "1.0.130"
tokio = "0.2.25"
uuid = {version = "0.8", features = ["v4"] }
